--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,15 @@
 
 }
 .header {
-  height: 400px;
+  height: 300px;
   background-color: #00B3B4;
   color: white;
   text-align: center;
+}
+.header h1 {
+  margin-top: 125px;
+}
+form {
+  
+  float: left;
 }
