--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,53 @@
+* {
+  text-align: center;
+}
+html {
+  background-color: grey;
+}
 .container-fluid {
-
+text-align: center;
+background-color: grey;
 }
 .header {
   height: 300px;
   background-color: #00B3B4;
   color: white;
   text-align: center;
+  border-bottom: 10px solid black;
 }
 .header h1 {
   margin-top: 125px;
 }
 form {
 text-align: center;
+color: white;
+display: inline;
+}
+button {
+  color: black;
 }
 .col-md-3 img {
   display: none;
   height: 300px;
   width: 300px;
   border: 1px solid black;
+  background-color: white;
+  border: 15px solid black;
+  border-radius: 40px;
+}
+
+
+.centeredDiv {
+
+  margin-top: 100px;
+  border: 10px solid black;
+  border-radius: 15px;
+  background-color: white;
+  height: 500px;
+  width: 500px;
+}
+.centeredDiv ul {
+  text-align: center;
+  list-style: none;
+
 }
