--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,8 @@
-* {
-  text-align: center;
-}
+
 html {
   background-color: grey;
 }
 .container-fluid {
-text-align: center;
 background-color: grey;
 }
 .header {
@@ -17,6 +14,7 @@ background-color: grey;
 }
 .header h1 {
   margin-top: 125px;
+  font-size: 80px;
 }
 form {
 text-align: center;
@@ -34,11 +32,11 @@ button {
   background-color: white;
   border: 15px solid black;
   border-radius: 40px;
+  margin-bottom: 50px;
 }
 
 
 .centeredDiv {
-
   margin-top: 100px;
   border: 10px solid black;
   border-radius: 15px;
@@ -46,8 +44,10 @@ button {
   height: 500px;
   width: 500px;
 }
-.centeredDiv ul {
+.centeredDiv h2 {
   text-align: center;
-  list-style: none;
-
+}
+.centeredDiv ul {
+  float: left;
+  font-size: 20px;
 }
