--- a/css/styles.css
+++ b/css/styles.css
@@ -6,15 +6,26 @@ html {
 background-color: grey;
 }
 .header {
-  height: 300px;
+  height: 250px;
   background-color: #00B3B4;
   color: white;
   text-align: center;
   border-bottom: 10px solid black;
 }
+h1, h2 {
+  font-size: 20px;
+  font-family: 'Baloo Tamma', cursive;
+}
+h4 {
+  font-family: 'NTR', sans-serif;
+}
+li {
+
+  font-family: 'Flamenco', cursive;
+}
 .header h1 {
   margin-top: 125px;
-  font-size: 80px;
+  font-size: 100px;
 }
 form {
 text-align: center;
