--- a/css/styles.css
+++ b/css/styles.css
@@ -6,31 +6,41 @@ html {
 background-color: grey;
 }
 .header {
-  height: 250px;
+  height: 275px;
   background-color: #00B3B4;
   color: white;
   text-align: center;
   border-bottom: 10px solid black;
 }
+
 h1, h2 {
   font-size: 20px;
   font-family: 'Baloo Tamma', cursive;
 }
 h4 {
   font-family: 'NTR', sans-serif;
+  margin: 10px;
 }
 li {
 
   font-family: 'Flamenco', cursive;
 }
 .header h1 {
-  margin-top: 125px;
+  margin-top: 50px;
   font-size: 100px;
 }
 form {
 text-align: center;
 color: white;
 display: inline;
+}
+
+form h4 {
+  border-top: 1px solid #E3E3E5;
+  padding-bottom: 5px;
+}
+#headerTop {
+  border-top: none;
 }
 button {
   color: black;
