--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ html {
 background-color: grey;
 }
 .header {
-  height: 275px;
+  height: 200px;
   background-color: #00B3B4;
   color: white;
   text-align: center;
@@ -27,7 +27,7 @@ li {
 }
 .header h1 {
   margin-top: 50px;
-  font-size: 100px;
+  font-size: 120px;
 }
 form {
 text-align: center;
@@ -43,29 +43,39 @@ form h4 {
   border-top: none;
 }
 button {
-  color: black;
+  color: red;
+  margin: 25px;
+
 }
 .col-md-3 img {
   display: none;
   height: 300px;
   width: 300px;
-  border: 1px solid black;
   background-color: white;
-  border: 15px solid black;
-  border-radius: 40px;
+  border: none;
+  border-radius: 50px;
   margin-bottom: 50px;
+  margin-left: 75px;
+  box-shadow: 5px 5px rgb(54,54,54);
+
+}
+img:hover {
+
+  box-shadow: none;
 }
 
 .centeredDiv {
   margin-top: 100px;
-  border: 10px solid black;
+  border: none;
   border-radius: 15px;
   background-color: white;
   height: 500px;
   width: 500px;
+  padding-right: 5px;
 }
 .centeredDiv h2 {
   text-align: center;
+  padding-top: 20px;
 }
 .centeredDiv ul {
   float: left;
